Bug 381242 - Application Launcher stops working when "Minimize All Windows" widgets is clicked
Summary: Application Launcher stops working when "Minimize All Windows" widgets is cli...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.10.2
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 383053 390091 394190 394837 396252 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-15 17:55 UTC by MitraX
Modified: 2018-07-09 15:16 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MitraX 2017-06-15 17:55:24 UTC
DESCRIPTION:

If a user open application launcher and after that click the minimize windows panel widget the application launcher stops working.

REPRODUCIBLE: Always

STEPS TO REPRODUCE:

1) Add "Minimize All Windows" widget to a panel

2) Click the "Application Launcher" (and leave it open!)

3) Click the "Minimize All Windows" widget

4) The "Application Launcher" widget is minimized, but it's not possible to open it again
Comment 1 Patrick Silva 2017-06-16 23:21:24 UTC
I can confim this on Arch running plasma 5.10.2.
Comment 2 David Edmundson 2017-06-21 13:16:41 UTC
Qt version please?
Comment 3 Patrick Silva 2017-06-21 15:51:28 UTC
qt 5.9 on my Arch.
Comment 4 MitraX 2017-06-21 18:24:28 UTC
Platform: KDE Neon
KDE Plasma Version: 5.10.2
KDE Framework Version: 5.35.0
Qt Version: 5.9.0

Basically, the issue exists in a couple of latest Plasma and Qt versions (probably even before but I didn't test it).
Comment 5 MitraX 2017-06-21 18:28:27 UTC
Additional detail: Clicking the "Minimize Windows" widget doesn't maximize previously minimized windows in this case.
Comment 6 Patrick Silva 2017-09-24 22:38:56 UTC
I did a clean neon dev install today and noticed that this bug is still present.
Comment 7 MitraX 2017-09-27 19:51:27 UTC
Yes, it still exists.
Comment 8 Patrick Silva 2018-01-17 14:20:20 UTC
same problem in plasma 5.12 beta, Arch Linux.
Comment 9 Patrick Silva 2018-02-09 03:52:07 UTC
*** Bug 390091 has been marked as a duplicate of this bug. ***
Comment 10 eugene 2018-02-16 09:14:20 UTC
Same problem. Kubuntu 17.10, Plasma 5.12.1
Comment 11 hee 2018-02-19 05:53:36 UTC
confirm on ubuntu 16.04 with last neon
Comment 12 Alexander Mentyu 2018-03-01 11:46:39 UTC
Cannot reproduce for Application Launcher - but can reproduce for System Tray popup in:

Plasma: 5.12.2
Apps: 17.12.2
Frameworks: 5.43.0
Qt: 5.10.1
Kernel: 4.14.22-1-MANJARO
OS: Netrunner Rolling
Comment 13 hee 2018-05-08 06:29:09 UTC
kubuntu 18.04 64 bit - bug still present
Comment 14 Patrick Silva 2018-05-14 14:29:03 UTC
bug 394190 seems related/duplicate.
Comment 15 Nate Graham 2018-05-14 15:38:46 UTC
*** Bug 394190 has been marked as a duplicate of this bug. ***
Comment 16 Kai Uwe Broulik 2018-05-16 12:00:45 UTC
Git commit 11f4e5b392acade56ad240f695f66eb42377e57c by Kai Uwe Broulik.
Committed on 16/05/2018 at 12:00.
Pushed by broulik into branch 'master'.

[Dialog] Handle dialog being minimized gracefully

Dialogs don't show up in task bar and also don't have window decoration so they're not meant to be minimized.
However, they might still be minimized by external means, such as "Minimize All" plasmoid.
In this case hide the dialog. Also, Qt restores a minimize state when showing again, rendering the dialog inaccessible.
Before showing, always unset the minimized state using new Qt 5.10 API

Differential Revision: https://phabricator.kde.org/D12876

M  +13   -0    src/plasmaquick/dialog.cpp

https://commits.kde.org/plasma-framework/11f4e5b392acade56ad240f695f66eb42377e57c
Comment 17 Patrick Silva 2018-05-16 17:55:02 UTC
*** Bug 377956 has been marked as a duplicate of this bug. ***
Comment 18 Nate Graham 2018-05-27 03:32:20 UTC
*** Bug 383053 has been marked as a duplicate of this bug. ***
Comment 19 Patrick Silva 2018-06-14 18:02:38 UTC
*** Bug 394837 has been marked as a duplicate of this bug. ***
Comment 20 Patrick Silva 2018-07-09 15:16:03 UTC
*** Bug 396252 has been marked as a duplicate of this bug. ***